--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,19 @@ jobs:
     steps:
       - checkout
       - run: node --version
+      - run: docker --version
+      - run: docker build -t udagram-api-feed ./udagram-api-feed
+      - run: docker build -t udagram-api-user ./udagram-api-user
+      - run: docker build -t udagram-frontend ./udagram-frontend
+      - run: docker build -t reverseproxy ./udagram-reverseproxy
+      - run: docker tag udagram-api-feed fuzzworth/udagram-api-feed:v7a
+      - run: docker tag udagram-api-user fuzzworth/udagram-api-user:v7a
+      - run: docker tag udagram-frontend fuzzworth/udagram-frontend:v7a
+      - run: docker tag reverseproxy fuzzworth/reverseproxy:v7a
+      - run: echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+      - run: docker push fuzzworth/udagram-api-feed:v7a
+      - run: docker push fuzzworth/udagram-api-user:v7a
+      - run: docker push fuzzworth/udagram-frontend:v7a
+      - run: docker push fuzzworth/reverseproxy:v7a
+
+# VS Code Extension Version: 1.0.2
