--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
       - checkout
       - run: node --version
       - run: docker --version
-      - run: docker build -t udagram-api-feed ./udagram-api-feed/Dockerfile
-      - run: docker build -t udagram-api-user ./udagram-api-user/Dockerfile
-      - run: docker build -t udagram-frontend ./udagram-frontend/Dockerfile
-      - run: docker build -t reverseproxy ./udagram-reverseproxy/Dockerfile
+      - run: docker build -t udagram-api-feed ./udagram-api-feed/
+      - run: docker build -t udagram-api-user ./udagram-api-user/
+      - run: docker build -t udagram-frontend ./udagram-frontend/
+      - run: docker build -t reverseproxy ./udagram-reverseproxy/
       - run: docker tag udagram-api-feed fuzzworth/udagram-api-feed:v7a
       - run: docker tag udagram-api-user fuzzworth/udagram-api-user:v7a
       - run: docker tag udagram-frontend fuzzworth/udagram-frontend:v7a
