--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,22 +4,54 @@ jobs:
   build:
     docker:
       - image: cimg/node:12.22
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
+      - setup_remote_docker
       - run: node --version
       - run: docker --version
-      - run: docker build -t udagram-api-feed ./udagram-api-feed/
-      - run: docker build -t udagram-api-user ./udagram-api-user/
-      - run: docker build -t udagram-frontend ./udagram-frontend/
-      - run: docker build -t reverseproxy ./udagram-reverseproxy/
-      - run: docker tag udagram-api-feed fuzzworth/udagram-api-feed:v7a
-      - run: docker tag udagram-api-user fuzzworth/udagram-api-user:v7a
-      - run: docker tag udagram-frontend fuzzworth/udagram-frontend:v7a
-      - run: docker tag reverseproxy fuzzworth/reverseproxy:v7a
+       # invoke environment variable without curly braces.
+      - run:
+          name: "Build Udagram Feed"
+          command: docker build -t udagram-api-feed ./udagram-api-feed
+      - run:
+          name: "Build Udagram User"
+          command: docker build -t udagram-api-user ./udagram-api-user
+      - run:
+          name: "Build Udagram Frontend"
+          command: docker build -t udagram-frontend ./udagram-frontend/
+      - run:
+          name: "Build Udagram Reverse Proxy"
+          command: docker build -t reverseproxy ./udagram-reverseproxy/
+      - run:
+          name: "Tag Udagram Feed"
+          command: docker tag udagram-api-feed fuzzworth/udagram-api-feed:v7a
+      - run:
+          name: "Tag Udagram User"
+          command: docker tag udagram-api-user fuzzworth/udagram-api-user:v7a
+      - run:
+          name: "Tag Udagram Frontend"
+          command: docker tag udagram-frontend fuzzworth/udagram-frontend:v7a
+      - run:
+          name: "Tag Udagram Reverse Proxy"
+          command: docker tag reverseproxy fuzzworth/reverseproxy:v7a
+      - run:
+          name: "Build Udagram Reverse Proxy"
+          command: docker build -t reverseproxy ./udagram-reverseproxy/
       - run: echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-      - run: docker push fuzzworth/udagram-api-feed:v7a
-      - run: docker push fuzzworth/udagram-api-user:v7a
-      - run: docker push fuzzworth/udagram-frontend:v7a
-      - run: docker push fuzzworth/reverseproxy:v7a
+      - run:
+          name: "Push Udagram Feed"
+          command: docker push fuzzworth/udagram-api-feed:v7a
+      - run:
+          name: "Push Udagram User"
+          command: docker push fuzzworth/udagram-api-user:v7a
+      - run:
+          name: "Push Udagram Frontend"
+          command: docker push fuzzworth/udagram-frontend:v7a
+      - run:
+          name: "Push Udagram Reverse Proxy"
+          command: docker push fuzzworth/reverseproxy:v7a
 
 # VS Code Extension Version: 1.0.2
