Added circleci stuff and fix v9

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,13 +110,13 @@ workflows:
       - build-feed
       - build-user
       - build-frontend
-      - build-reverse
+      - build-reverseproxy
       - push:
           requires:
             - build-feed
             - build-user
             - build-frontend
-            - build-reverse
+            - build-reverseproxy
           filters:
             branches:
               only: main
