Added circleci stuff and fix v16

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,7 +155,7 @@ workflows:
       - push-user:
           requires:
             - build-user
-      - push-front:
+      - push-frontend:
           requires:
             - build-frontend
       - push-reverse:
